Gradle and pinterest version increase, format